# antlr_wat

./: .gitignore  README.md
AFLplusplus_v4.09c/: TODO.md
AFLplusplus_v4.09c/custom_mutators/antlr4_test/: CMakeCache.txt  CMakeLists.txt  Check.cpp  Check.h  Makefile  README.md  StrLexer.g4  build.sh  clean.sh  cmake_install.cmake  fuzz.sh  vlun  vlun.c  vlun_clang_fuzz  vlun_fuzz
AFLplusplus_v4.09c/custom_mutators/antlr4_test/.antlr/: StrLexer.java  StrParser.java
AFLplusplus_v4.09c/custom_mutators/antlr4_test/antlr_parser/: CMakeLists.txt  Makefile  StrLexer.g4  StrParser.g4  cmake_install.cmake  fuzz.sh
AFLplusplus_v4.09c/custom_mutators/antlr4_test/antlr_parser/.antlr/: StrLexer.java  StrParser.java
AFLplusplus_v4.09c/custom_mutators/antlr4_test/antlr_parser/runtime/: CMakeLists.txt  Makefile  cmake_install.cmake
AFLplusplus_v4.09c/custom_mutators/antlr4_test/antlr_parser/src/: StrLexer.cpp  StrLexer.interp  StrLexer.tokens  StrParser.cpp  StrParser.h  StrParser.interp  StrParserBaseListener.cpp  StrParserVisitor.cpp  WatFuzz.cpp  WatFuzz.h
AFLplusplus_v4.09c/custom_mutators/antlr4_test/input/: seed1.txt  seed2.txt  seed3.txt
AFLplusplus_v4.09c/custom_mutators/antlr4_test/output/default/: .cur_input  cmdline  fuzzer_setup  fuzzer_stats  plot_data
AFLplusplus_v4.09c/custom_mutators/antlr4_test/output/default/queue/: id:000000,time:0,execs:0,orig:seed1.txt
AFLplusplus_v4.09c/custom_mutators/antlr4_test/output/main/: .cur_input  cmdline  fuzz_bitmap  fuzzer_setup  fuzzer_stats  plot_data
AFLplusplus_v4.09c/custom_mutators/antlr4_test/output/main/queue/: id:000000,time:0,execs:0,orig:seed1.txt  (+3 more)
AFLplusplus_v4.09c/custom_mutators/antlr4_test/src/: StrLexer.cpp  StrLexer.h  StrLexer.interp  StrOverrideVisitor.cpp  StrOverrideVisitor.h  StrParser.cpp  StrParser.interp  StrParserBaseListener.h  StrParserBaseVisitor.cpp  StrParserBaseVisitor.h  StrParserListener.cpp  StrParserListener.h  StrParserVisitor.h  WatFuzz.cpp  WatFuzz.h
AFLplusplus_v4.09c/custom_mutators/antlr4_test/vlun/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  vlun  vlun.c  vlun_clang  vlun_gcc
antlr4_JS_grammar_check_cpp/: CMakeLists.txt  JavaScriptLexer.g4  JavaScriptParser.g4
antlr4_JS_grammar_check_cpp/common/: JavaScriptLexer.cpp  JavaScriptLexer.h  JavaScriptLexerBase.h  JavaScriptParser.cpp  JavaScriptParser.h  JavaScriptParserBase.cpp  JavaScriptParserBase.h  JavaScriptParserBaseListener.cpp  JavaScriptParserBaseListener.h  JavaScriptParserBaseVisitor.cpp  JavaScriptParserBaseVisitor.h  JavaScriptParserListener.cpp  JavaScriptParserListener.h  JavaScriptParserVisitor.cpp  JavaScriptParserVisitor.h  antlr_clean.sh  antlr_compile.sh
antlr4_JS_grammar_check_cpp/include/: GrammarCheck.cpp  GrammarCheck.h
antlr4_JS_grammar_check_cpp/inputfile/: CVE-2023-4068.js
antlr4_JS_grammar_check_cpp/outputfile/CVE-2023-4068/: parse_tree_output.txt
antlr4_JS_grammar_check_cpp/src/: main.cpp
antlr4_grammar_check_cpp/: .clang-format  CMakeLists.txt  Check.cpp  Check.h  README.md  WatLexer.cpp  WatLexer.g4  WatLexer.h  WatLexer.interp  WatParser.cpp  WatParser.g4  WatParser.h  WatParser.interp  WatParserBaseListener.h  WatParserBaseVisitor.cpp  WatParserBaseVisitor.h  WatParserListener.cpp  WatParserListener.h  WatParserVisitor.h  a.out  main.cpp
antlr4_grammar_check_cpp/.antlr/: WatLexer.interp  WatLexer.java  WatLexer.tokens  WatParser.interp  WatParser.java  WatParser.tokens
antlr4_grammar_check_cpp/input_file/: test2.wat
antlr4_grammar_check_cpp/input_file/debug_file/know_error/: bug1693500.wat
antlr4_grammar_check_cpp/input_file/debug_file/segmentation_bug/: 260516_ERROR.wat  ion-bug1688713.wat  regress-1754701.wat
antlr4_grammar_check_cpp/input_file/debug_file/unsupport_grammar/: bug-1744663-extended.wat  bug-1747562.wat  bug-1751699.wat  bug-1797685.wat
antlr4_grammar_check_cpp/input_file/jsc/: 258801.wat  260516.wat  260516_ERROR.wat  bug252538_1.wat  bug254226_2.wat  bug262863.wat
antlr4_grammar_check_cpp/input_file/sm/: bug-1845436.wat  bug-1845673.wat  bug-1854007.wat  bug1590920.wat  ion-bug1641973.wat  regress-1621645-2.wat  regress-1629496.wat  regress-1754701.wat  regress-1830975.wat
antlr4_grammar_check_cpp/input_file/testfile/: test3.wat
antlr4_grammar_check_cpp/input_file/testwasm/: jsc_258302.wat  jsc_258795.wat  jsc_258801.wat  jsc_260516.wat  jsc_262862.wat  jsc_262863.wat  jsc_266167.wat  jsc_266167_2.wat  jsc_266249.wat  jsc_bug247874.wat  parse_error_bug1865044.wat  spidermonkey_CVE-2021-29945.wat  spidermonkey_CVE-2022-31740.wat  spidermonkey_bug-1843295.wat  spidermonkey_bug1300546.wat  spidermonkey_bug1678785.wat  spidermonkey_bug1684861.wat  spidermonkey_bug1770335.wat  spidermonkey_bug1839065.wat  spidermonkey_bug1862473.wat  spidermonkey_regress-1621645.wat  spidermonkey_regress-1745391.wat  v8_CVE-2018-6061.wat
antlr4_grammar_check_cpp/input_file/v8/: 1469825.wat
antlr4_grammar_check_cpp/original_g4_file/.antlr/: WatLexer.java  WatParser.java  WatParser.tokens
antlr4_grammar_check_cpp/output_file/: test2_lexer_error_output.wat  test2_parser_error_output.wat
antlr4_grammar_check_cpp/rewrite_g4_file/: WatLexer.g4  WatParser.g4
antlr4_grammar_check_cpp/rewrite_g4_file/.antlr/: WatLexer.interp  WatLexer.java  WatLexer.tokens  WatParser.interp  WatParser.java  WatParser.tokens
antlr4_grammar_check_cpp/src/: WatLexer.cpp  WatLexer.h  WatLexer.interp  WatLexer.java  WatLexer.tokens  WatParser.cpp  WatParser.h  WatParser.interp  WatParser.java  WatParserBaseListener.cpp  WatParserBaseListener.h  WatParserBaseListener.java  WatParserBaseVisitor.h  WatParserBaseVisitor.java  WatParserListener.h  WatParserListener.java  WatParserVisitor.cpp  WatParserVisitor.h  WatParserVisitor.java  antlr_compile.sh
antlr4_grammar_check_cpp/test_file/: test2_rewrite.wat
antlr4_grammar_check_cpp/tool/: wasm
wasm_fuzz/: CMakeLists.txt
wasm_fuzz/V8/: command_hello_world.sh  command_shell.sh  command_wasm_test.sh
wasm_fuzz/V8/reference/: args.gn  d8help.txt  gnargs.txt  record.txt  reference.cc
wasm_fuzz/V8/samples/: wasm-test.cc
(+258 files in other folders)
